# jigsaw-rules-classification

./: .gitignore  README.md  kaggle.json  kernel-metadata.json  pyproject.toml  requirements.txt
config/: roberta_config.yaml
config/oft/: accelerate_config.yaml
dataset/result/: embedding.json
dataset/synthetic/: comments.json  create_dataset.py  rules.json
kaggle_kernel/: README.md  jigsaw_rules.ipynb  kernel-metadata.json
notebooks/: generate_data.ipynb  view_dataset.ipynb  visualize_embedding.ipynb
src/jigsaw_rules/: configs.py  constants.py  dataset.py  evaluate.py  inference.py  models.py  semantic.py  train.py  utils.py
src/jigsaw_rules/oft/: constants.py  semantic.py  train.py
