[project]
name = "jigsaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "auto-gptq==0.7.1",
    "bitsandbytes==0.46.1",
    "clean-text>=0.6.0",
    "datasets>=4.0.0",
    "deepspeed==0.17.4",
    "logits-processor-zoo==0.2.1",
    "optimum==1.27.0",
    "peft>=0.17.1",
    "sentence-transformers==3.4.1",
    "triton==3.2.0",
    "trl==0.21.0",
    "vllm==0.10.0",
]
